--- a/html_css/forms.html
+++ b/html_css/forms.html
@@ -30,16 +30,14 @@
 
         <label for="question">Security question</label>
         <select id="question" name="question">
-            <option value="q1">What's the color of your bugatti?</option>
-            <option value="q2">What's the color of your benz?</option>
-            <option value="q1">What's the color of your toyota?</option>
+            <option value="q1">What's the color of your bugatti?</option><br>
+            <option value="q2">What's the color of your benz?</option><br>
+            <option value="q1">What's the color of your toyota?</option><br>
 
             <br><br>
 
             <label for="answer">Security question answer:</label>
-            <input type="text" id="answer" name="answer" placeholder="Your answer">
-            
-            <br><br>
+            <input type="text" id="answer" name="answer">
             
             <label for="bio">Your bio</label><br>
             <textarea id="bio" name="bio" cols="30" rows="10"></textarea>
