--- a/html_css/forms.html
+++ b/html_css/forms.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <title>HTML Forms</title>
 </head>
 <body>
@@ -40,7 +41,7 @@
             <input type="text" id="answer" name="answer" placeholder="Your answer">
             
             <br><br>
-            
+
             <label for="bio">Your bio</label><br>
             <textarea id="bio" name="bio" cols="30" rows="10"></textarea>
 
